Add a variable for the number of gateways

--- a/dolly.env.sample
+++ b/dolly.env.sample
@@ -1,5 +1,6 @@
 SENDTO=example1@example.com,example2@example.com
-GW1=tftp://gw1_host_name
+NUM_OF_GW=2
+GW1=gw1_host_name/config0/admin_pass
 GW1_CONF=filename1
-GW2=tftp://gw2_host_name
+GW2=gw2_host_name/config0/admin_pass
 GW2_CONF=filename2
